# profile.mobile.apps.native.ug-myfile-efl

./: .cproject  .project  CMakeLists.txt  feature_rm.py  org.tizen.ug-myfile-efl-1.0.0-arm-debug.tpk  org.tizen.ug-myfile-efl-1.0.0-arm.tpk  org.tizen.ug-myfile-efl-1.0.0-arm_debug.tpk  org.tizen.ug-myfile-efl-1.0.0-i386-debug.tpk  org.tizen.ug-myfile-efl-1.0.0-i386.tpk  org.tizen.ug-myfile-efl-1.0.0-i386_debug.tpk  project_def.prop  tizen-manifest.xml  ug-myfile-button.edc  ug-myfile-efl.manifest  ug-myfile-efl.manifest.xml  ug-myfile-efl.xml  ug-myfile-toolbar.edc  ug_edc_image_macro.edc  ug_radio.edc
inc/: mf-ug-cb.h  mf-ug-conf.h  mf-ug-dlog.h  mf-ug-file-util.h  mf-ug-fm-svc-wrapper.h  mf-ug-fs-util.h  mf-ug-inotify-handle.h  mf-ug-main.h  mf-ug-media-error.h  mf-ug-media-types.h  mf-ug-media.h  mf-ug-resource.h  mf-ug-ringtone-view.h  mf-ug-search-internal.h  mf-ug-util.h  mf-ug-view.h  mf-ug-widget.h  mf-ug-winset.h  ug-myfiles-efl.h
packaging/: org.tizen.ug-myfile-efl.spec  ug-myfile-efl.spec
res/edc/: ug_genlist.edc  ug_navibar_layout.edc
res/edje/: ug_navibar_layout.edc
res/po/: CMakeLists.txt  ar.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  kn.po  ko_KR.po  lt.po  lv.po  mk.po  ml.po  mr.po  nb.po  (+23 more)
src/: CMakeLists.txt  mf-ug-main.c
src/common/: mf-ug-cb.c  mf-ug-db-handle.c  mf-ug-file-util.c  mf-ug-fm-svc-wapper.c  mf-ug-inotify-handle.c  mf-ug-list-play.c  mf-ug-music.c  mf-ug-search-internal.c  mf-ug-search.c  mf-ug-util.c
src/common/file-system/: mf-ug-file-attr.c  mf-ug-fs-oper.c
src/include/: mf-ug-cb.h  mf-ug-conf.h  mf-ug-db-handle.h  mf-ug-dlog.h  mf-ug-fs-util.h  mf-ug-list-play.h  mf-ug-main.h  mf-ug-media-db.h  mf-ug-music.h  mf-ug-resource.h  mf-ug-search.h
src/media-db/: mf-ug-media-db.c  mf-ug-media.c
src/widget/: mf-ug-genlist.c  mf-ug-navi-bar.c  mf-ug-popup.c  mf-ug-ringtone-view.c  mf-ug-search-view.c  mf-ug-widget.c
tests/ugmyfiletestapp/: CMakeLists.txt  build.sh  git.tgz  org.tizen.ugmyfiletestapp.xml.in
tests/ugmyfiletestapp/edj/: layoutedj.edc
tests/ugmyfiletestapp/include/: dbg.h  main.h
tests/ugmyfiletestapp/packaging/: org.tizen.ugmyfiletestapp.spec
tests/ugmyfiletestapp/src/: main.c
