CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ug-myfile-efl C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})

# subdir
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(src/common)
ADD_SUBDIRECTORY(src/media-db)
ADD_SUBDIRECTORY(src/widget)
ADD_SUBDIRECTORY(res/edje)
ADD_SUBDIRECTORY(res/edje/icons)
ADD_SUBDIRECTORY(res/edje/images)
ADD_SUBDIRECTORY(res/po)
ADD_SUBDIRECTORY(res/edje/sounds)

CONFIGURE_FILE(ug-myfile-efl.manifest-3.0.in ${PKGNAME}.manifest)

INSTALL(FILES ug-myfile-efl.manifest.xml DESTINATION ${MANIFESTDIR} RENAME ${PKGNAME}.xml)
INSTALL(FILES shared/res/ug-myfile-efl.png DESTINATION ${ICONDIR})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/res/edje/images/ DESTINATION ${IMGDIR})
